kube.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: war-with-josh
  labels:
    app: war-with-josh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: war-with-josh
  template:
    metadata:
      labels:
        app: war-with-josh
    spec:
      containers:
      - name: app
        imagePullPolicy: Always
        image: abvaden/warwithjosh:arm
        ports:
        - containerPort: 3000
      - name: redis
        image: redis
        ports:
          - containerPort: 6379
