kube.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: war-with-josh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  selector:
    app: war-with-josh
  rules:
  - http:
      paths:
      - path: /WarWithJosh
        backend:
          serviceName: war-with-josh
          servicePort: 80
